<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/toolbar_division"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivision"
            android:orientation="horizontal"></LinearLayout>


    <FrameLayout
            android:id="@+id/main_content2"
            android:layout_below="@id/selectBar"
            android:layout_above="@id/nav_division"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorgray">
    </FrameLayout>

    <LinearLayout
            android:id="@+id/nav_division"
            android:background="@color/colorDivision"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="1dp">
    </LinearLayout>

<LinearLayout
        android:id="@+id/selectBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
            android:id="@+id/dailyseleced"
            android:text="@string/daily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:layout_weight="1">

    </Button>
    <Button
            android:id="@+id/weeklyseleced"
            android:text="@string/weekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:layout_weight="1">

    </Button>
    <Button
            android:id="@+id/monthlyseleced"
            android:text="@string/monthly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:layout_weight="1">

    </Button>
</LinearLayout>


</RelativeLayout>